# OSS-Rewards-Agent

./: .gitignore  .prettierignore  README.md
backend/: .env.sample  .gitignore  README.md  agent.db  app.py  chatbot.py  constants.py  pyproject.toml  websocket_module.py
backend/abi/: contract_abi.json
backend/agent/: initialize_agent.py
backend/custom_actions/: evaluate_contribution.py
backend/db/: rewards.py  setup.py
backend/settings/: env.py
contracts/: .env.example  foundry.toml
contracts/script/: DeployGitHubIssueReward.s.sol  DeployGitHubIssueReward.sh  DeployMockERC20.s.sol  DeployMockERC20.sh
contracts/src/: GitHubIssueReward.sol
contracts/test/: GitHubIssueReward.t.sol
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: AIAgentInput.tsx  Header.tsx  SignButton.tsx  Spinner.tsx  TimeDisplay.tsx  WalletAddress.tsx
frontend/constants/: claim.ts  config.ts  issues.ts
frontend/hooks/: useApproveToken.ts  useChat.ts  useGitHubIssueReward.ts  useRewards.ts
frontend/lib/: utils.ts  wagmiConfig.ts
frontend/script/: policies.sh  wallets.sh
frontend/types/: claim.ts  issue.ts  types.ts
lockReward_backend/: .env.example  README.md  agent.db  constants.py  index.py
lockReward_backend/agent/: contract_abi.json  erc20_abi.json  handle_agent_action.py  initialize_agent.py  run_agent.py
lockReward_backend/db/: init_rewards.py  rewards.py  setup.py
solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
solana/migrations/: deploy.ts
(+38 files in other folders)
