[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <first.last@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.6"
langgraph = "^0.2.42"
pydantic = "^2.9.2"
cdp-sdk = "^0.10.3"
python-dotenv = "^1.0.1"
cdp-langchain = "^0.0.4"
cdp-agentkit-core = "^0.0.3"
flask-cors = "^5.0.0"
requests = "^2.32.3"

flask = "^3.1.0"
flask-socketio = "^5.5.1"
eventlet = "^0.39.0"
pandas = "^2.2.3"
langchain-google-genai = "^2.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"